Bug 136331 - [UI] Bad display of dialog file when accessible-description contents exist.
Summary: [UI] Bad display of dialog file when accessible-description contents exist.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-31 15:53 UTC by Olivier Hallot
Modified: 2020-09-02 08:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
UI file with accessible-description contents (29.91 KB, application/x-designer)
2020-08-31 15:53 UTC, Olivier Hallot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2020-08-31 15:53:53 UTC
Created attachment 164930 [details]
UI file with accessible-description contents

The attached file is the UI file for formula dialog in Calc. It contains accessible-description contents. LibreOffice master cannot display it correctly and break tests.

To reproduce: Open a spreadsheet, click on the formula icon in the formula bar.

Failure is in 

make UITest_calc_tests

File was edited with Glade 3.36.

Other info

Version: 7.1.0.0.alpha0+
Build ID: de01c0c1d0f80ffec3882625d77c02ab806f6c7a
CPU threads: 16; OS: Linux 5.4; UI render: default; VCL: kf5
Locale: en-US (en_US.UTF-8); UI: pt-BR
Calc: CL
Comment 1 Commit Notification 2020-09-02 07:37:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7541fac2c0d5341f4d362779594ae236f05ff9a6

tdf#136331 implement applying atk properties to tab pages

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.