tdf#136331 implement applying atk properties to tab pages

Change-Id: I2ee57dbdb3d743fe1dd3d505a3aa2f479ffa62b1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101765
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>